# Blog

./: .gitignore  Dockerfile  alembic.ini  config.py  database.py  docker-compose.yml  funcs.py  main.py  main_old.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_10_11_1850-f2df393fa6a5_create_user_posts_publications.py  2024_10_18_1915-f0ce8c1c5bad_remake_unique_username_in_users_table.py
api/: __init__.py
api/api_v1/: __init__.py  dependencies.py  publications.py  users.py
core/: config.py
core/models/: __init__.py  base.py  comment.py  db_helper.py  models.py  publication.py  user.py
core/schemas/: publication.py  user.py
crud/: __init__.py  dependencies.py  publications.py  users.py
templates/: all_states.html  comm_create.html  create.html  delete.html  delete_comment.html  edit.html  error_delete.html
tests/: test_chat.py  test_prob.py  test_users.py
