[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["VarvarM <miha.furtat@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standart"], version = "^0.31.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
pyjwt = {version = "2.8.0", extras = ["crypto"]}
bcrypt = "4.1.2"
python-multipart = "0.0.9"
jinja2 = "^3.1.4"
orjson = "^3.10.7"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
